// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "blue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #1476FB;
  border: 1px solid #1476FB;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #0960D3;
  border: 1px solid #0960D3;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="blue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatBlue" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #1476FB;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #1476FB;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #1476FB;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatBlue"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #858585;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #858585;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #858585;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #858585;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatGray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatGreen" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #4CB050;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #4CB050;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #4CB050;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatGreen"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FF456A;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FF456A;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatWhite" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: rgba(235,235,235,0.5);
  border: 1px solid rgba(235,235,235,0);
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatWhite"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "flatYellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFE200;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #EBEBEB;
  border: 1px solid #EBEBEB;
  color: #FFE200;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFE200;
}

.c0:disabled {
  background-color: transparent;
  border: 1px solid transparent;
  color: #BFBFBF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #BFBFBF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="flatYellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "gray" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #858585;
  border: 1px solid #858585;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #6A6A6A;
  border: 1px solid #6A6A6A;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="gray"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "green" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #4CB050;
  border: 1px solid #4CB050;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #3C8C40;
  border: 1px solid #3C8C40;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="green"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" con estilo para "float" y "width". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  style={
    Object {
      "float": "left",
      "width": "100%",
    }
  }
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "red" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="red"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "secondaryRed" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFF;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FF456A;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="secondaryRed"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 1`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

<button
  className="c0"
  size="small"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 2`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

<button
  className="c0"
  size="medium"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][Button] - Boton con los siguientes temas: red, secondaryRed, flatRed, blue, flatBlue, green, flatGreen, yellow, flatYellow, gray, flatGray. Debe pintar el componente con el tema "yellow" y los tamaños "small", "medium" y "big". 3`] = `
.c0 {
  background-color: #FFE200;
  border: 1px solid #FFE200;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CCB400;
  border: 1px solid #CCB400;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .sc-bwzfXH {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .sc-bwzfXH {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .sc-bwzfXH {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  size="big"
  theme="yellow"
/>
`;

exports[`[SNAPSHOT][Componentes][Common][IconButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c2 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px 5px 0px 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover .c1 {
  fill: #FFF;
}

.c0:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c0:disabled .c1 {
  fill: #FFF;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.eLqEyC:hover .c1 {
  fill: #FFF;
}

.eLqEyC:disabled .c1 {
  fill: #FFF;
}

.eLqEyC .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.fkrEAu:hover .c1 {
  fill: #FFF;
}

.fkrEAu:disabled .c1 {
  fill: #FFF;
}

.fkrEAu .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.eLeNVn:hover .c1 {
  fill: #FFF;
}

.eLeNVn:disabled .c1 {
  fill: #FFF;
}

.eLeNVn .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.ggHuZO:hover .c1 {
  fill: #FFF;
}

.ggHuZO:disabled .c1 {
  fill: #FFF;
}

.ggHuZO .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.dkOUuu:hover .c1 {
  fill: #FFF;
}

.dkOUuu:disabled .c1 {
  fill: #FFF;
}

.dkOUuu .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.lcqJer:hover .c1 {
  fill: #FF456A;
}

.lcqJer:disabled .c1 {
  fill: #BFBFBF;
}

.lcqJer .c1 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.iPCzYB:hover .c1 {
  fill: #FF456A;
}

.iPCzYB:disabled .c1 {
  fill: #BFBFBF;
}

.iPCzYB .c1 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.elhzGX:hover .c1 {
  fill: #FF456A;
}

.elhzGX:disabled .c1 {
  fill: #BFBFBF;
}

.elhzGX .c1 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.hThPWc:hover .c1 {
  fill: #FFF;
}

.hThPWc:disabled .c1 {
  fill: #FFF;
}

.hThPWc .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.AWlLV:hover .c1 {
  fill: #FFF;
}

.AWlLV:disabled .c1 {
  fill: #FFF;
}

.AWlLV .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cceUYT:hover .c1 {
  fill: #FFF;
}

.cceUYT:disabled .c1 {
  fill: #FFF;
}

.cceUYT .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hkdgRd:hover .c1 {
  fill: #1476FB;
}

.hkdgRd:disabled .c1 {
  fill: #BFBFBF;
}

.hkdgRd .c1 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.gCPJNp:hover .c1 {
  fill: #1476FB;
}

.gCPJNp:disabled .c1 {
  fill: #BFBFBF;
}

.gCPJNp .c1 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.ixsFmi:hover .c1 {
  fill: #1476FB;
}

.ixsFmi:disabled .c1 {
  fill: #BFBFBF;
}

.ixsFmi .c1 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.dMDZWY:hover .c1 {
  fill: #FFF;
}

.dMDZWY:disabled .c1 {
  fill: #FFF;
}

.dMDZWY .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.jyvRpa:hover .c1 {
  fill: #FFF;
}

.jyvRpa:disabled .c1 {
  fill: #FFF;
}

.jyvRpa .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kuQuAk:hover .c1 {
  fill: #FFF;
}

.kuQuAk:disabled .c1 {
  fill: #FFF;
}

.kuQuAk .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cBEylu:hover .c1 {
  fill: #4CB050;
}

.cBEylu:disabled .c1 {
  fill: #BFBFBF;
}

.cBEylu .c1 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.grhPew:hover .c1 {
  fill: #4CB050;
}

.grhPew:disabled .c1 {
  fill: #BFBFBF;
}

.grhPew .c1 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.gPJEbi:hover .c1 {
  fill: #4CB050;
}

.gPJEbi:disabled .c1 {
  fill: #BFBFBF;
}

.gPJEbi .c1 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.kvrFrd:hover .c1 {
  fill: #FFF;
}

.kvrFrd:disabled .c1 {
  fill: #FFF;
}

.kvrFrd .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.kurbjj:hover .c1 {
  fill: #FFF;
}

.kurbjj:disabled .c1 {
  fill: #FFF;
}

.kurbjj .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kiQMnY:hover .c1 {
  fill: #FFF;
}

.kiQMnY:disabled .c1 {
  fill: #FFF;
}

.kiQMnY .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dlWHso:hover .c1 {
  fill: #FFE200;
}

.dlWHso:disabled .c1 {
  fill: #BFBFBF;
}

.dlWHso .c1 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.fLEPtd:hover .c1 {
  fill: #FFE200;
}

.fLEPtd:disabled .c1 {
  fill: #BFBFBF;
}

.fLEPtd .c1 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.dldNsa:hover .c1 {
  fill: #FFE200;
}

.dldNsa:disabled .c1 {
  fill: #BFBFBF;
}

.dldNsa .c1 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.iSnbTb:hover .c1 {
  fill: #FFF;
}

.iSnbTb:disabled .c1 {
  fill: #FFF;
}

.iSnbTb .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.bdACEm:hover .c1 {
  fill: #FFF;
}

.bdACEm:disabled .c1 {
  fill: #FFF;
}

.bdACEm .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.drlEWn:hover .c1 {
  fill: #FFF;
}

.drlEWn:disabled .c1 {
  fill: #FFF;
}

.drlEWn .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.bSwSlG:hover .c1 {
  fill: #858585;
}

.bSwSlG:disabled .c1 {
  fill: #BFBFBF;
}

.bSwSlG .c1 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.ieWbCw:hover .c1 {
  fill: #858585;
}

.ieWbCw:disabled .c1 {
  fill: #BFBFBF;
}

.ieWbCw .c1 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.llmvhI:hover .c1 {
  fill: #858585;
}

.llmvhI:disabled .c1 {
  fill: #BFBFBF;
}

.llmvhI .c1 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.cwRUoR:hover .c1 {
  fill: #FFF;
}

.cwRUoR:disabled .c1 {
  fill: #BFBFBF;
}

.cwRUoR .c1 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.hzhBwL:hover .c1 {
  fill: #FFF;
}

.hzhBwL:disabled .c1 {
  fill: #BFBFBF;
}

.hzhBwL .c1 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.dfRgJh:hover .c1 {
  fill: #FFF;
}

.dfRgJh:disabled .c1 {
  fill: #BFBFBF;
}

.dfRgJh .c1 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

<button
  className="c0"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c1 c2"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "big" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.iugCxF:hover .c2 {
  fill: #FFF;
}

.iugCxF:disabled .c2 {
  fill: #FFF;
}

.iugCxF .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.eLqEyC:hover .c2 {
  fill: #FFF;
}

.eLqEyC:disabled .c2 {
  fill: #FFF;
}

.eLqEyC .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 24px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 50px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 36px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.eLeNVn:hover .c2 {
  fill: #FFF;
}

.eLeNVn:disabled .c2 {
  fill: #FFF;
}

.eLeNVn .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.ggHuZO:hover .c2 {
  fill: #FFF;
}

.ggHuZO:disabled .c2 {
  fill: #FFF;
}

.ggHuZO .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.dkOUuu:hover .c2 {
  fill: #FFF;
}

.dkOUuu:disabled .c2 {
  fill: #FFF;
}

.dkOUuu .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.lcqJer:hover .c2 {
  fill: #FF456A;
}

.lcqJer:disabled .c2 {
  fill: #BFBFBF;
}

.lcqJer .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.iPCzYB:hover .c2 {
  fill: #FF456A;
}

.iPCzYB:disabled .c2 {
  fill: #BFBFBF;
}

.iPCzYB .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.elhzGX:hover .c2 {
  fill: #FF456A;
}

.elhzGX:disabled .c2 {
  fill: #BFBFBF;
}

.elhzGX .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.hThPWc:hover .c2 {
  fill: #FFF;
}

.hThPWc:disabled .c2 {
  fill: #FFF;
}

.hThPWc .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.AWlLV:hover .c2 {
  fill: #FFF;
}

.AWlLV:disabled .c2 {
  fill: #FFF;
}

.AWlLV .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cceUYT:hover .c2 {
  fill: #FFF;
}

.cceUYT:disabled .c2 {
  fill: #FFF;
}

.cceUYT .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hkdgRd:hover .c2 {
  fill: #1476FB;
}

.hkdgRd:disabled .c2 {
  fill: #BFBFBF;
}

.hkdgRd .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.gCPJNp:hover .c2 {
  fill: #1476FB;
}

.gCPJNp:disabled .c2 {
  fill: #BFBFBF;
}

.gCPJNp .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.ixsFmi:hover .c2 {
  fill: #1476FB;
}

.ixsFmi:disabled .c2 {
  fill: #BFBFBF;
}

.ixsFmi .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.dMDZWY:hover .c2 {
  fill: #FFF;
}

.dMDZWY:disabled .c2 {
  fill: #FFF;
}

.dMDZWY .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.jyvRpa:hover .c2 {
  fill: #FFF;
}

.jyvRpa:disabled .c2 {
  fill: #FFF;
}

.jyvRpa .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kuQuAk:hover .c2 {
  fill: #FFF;
}

.kuQuAk:disabled .c2 {
  fill: #FFF;
}

.kuQuAk .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cBEylu:hover .c2 {
  fill: #4CB050;
}

.cBEylu:disabled .c2 {
  fill: #BFBFBF;
}

.cBEylu .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.grhPew:hover .c2 {
  fill: #4CB050;
}

.grhPew:disabled .c2 {
  fill: #BFBFBF;
}

.grhPew .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.gPJEbi:hover .c2 {
  fill: #4CB050;
}

.gPJEbi:disabled .c2 {
  fill: #BFBFBF;
}

.gPJEbi .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.kvrFrd:hover .c2 {
  fill: #FFF;
}

.kvrFrd:disabled .c2 {
  fill: #FFF;
}

.kvrFrd .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.kurbjj:hover .c2 {
  fill: #FFF;
}

.kurbjj:disabled .c2 {
  fill: #FFF;
}

.kurbjj .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kiQMnY:hover .c2 {
  fill: #FFF;
}

.kiQMnY:disabled .c2 {
  fill: #FFF;
}

.kiQMnY .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dlWHso:hover .c2 {
  fill: #FFE200;
}

.dlWHso:disabled .c2 {
  fill: #BFBFBF;
}

.dlWHso .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.fLEPtd:hover .c2 {
  fill: #FFE200;
}

.fLEPtd:disabled .c2 {
  fill: #BFBFBF;
}

.fLEPtd .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.dldNsa:hover .c2 {
  fill: #FFE200;
}

.dldNsa:disabled .c2 {
  fill: #BFBFBF;
}

.dldNsa .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.iSnbTb:hover .c2 {
  fill: #FFF;
}

.iSnbTb:disabled .c2 {
  fill: #FFF;
}

.iSnbTb .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.bdACEm:hover .c2 {
  fill: #FFF;
}

.bdACEm:disabled .c2 {
  fill: #FFF;
}

.bdACEm .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.drlEWn:hover .c2 {
  fill: #FFF;
}

.drlEWn:disabled .c2 {
  fill: #FFF;
}

.drlEWn .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.bSwSlG:hover .c2 {
  fill: #858585;
}

.bSwSlG:disabled .c2 {
  fill: #BFBFBF;
}

.bSwSlG .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.ieWbCw:hover .c2 {
  fill: #858585;
}

.ieWbCw:disabled .c2 {
  fill: #BFBFBF;
}

.ieWbCw .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.llmvhI:hover .c2 {
  fill: #858585;
}

.llmvhI:disabled .c2 {
  fill: #BFBFBF;
}

.llmvhI .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.cwRUoR:hover .c2 {
  fill: #FFF;
}

.cwRUoR:disabled .c2 {
  fill: #BFBFBF;
}

.cwRUoR .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.hzhBwL:hover .c2 {
  fill: #FFF;
}

.hzhBwL:disabled .c2 {
  fill: #BFBFBF;
}

.hzhBwL .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.dfRgJh:hover .c2 {
  fill: #FFF;
}

.dfRgJh:disabled .c2 {
  fill: #BFBFBF;
}

.dfRgJh .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 9px 0px;
  width: 50px;
}

<button
  className="c0 c1"
  icon="plus"
  size="big"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "medium" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.iugCxF:hover .c2 {
  fill: #FFF;
}

.iugCxF:disabled .c2 {
  fill: #FFF;
}

.iugCxF .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 18px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 40px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.fkrEAu:hover .c2 {
  fill: #FFF;
}

.fkrEAu:disabled .c2 {
  fill: #FFF;
}

.fkrEAu .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.eLeNVn:hover .c2 {
  fill: #FFF;
}

.eLeNVn:disabled .c2 {
  fill: #FFF;
}

.eLeNVn .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.ggHuZO:hover .c2 {
  fill: #FFF;
}

.ggHuZO:disabled .c2 {
  fill: #FFF;
}

.ggHuZO .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.dkOUuu:hover .c2 {
  fill: #FFF;
}

.dkOUuu:disabled .c2 {
  fill: #FFF;
}

.dkOUuu .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.lcqJer:hover .c2 {
  fill: #FF456A;
}

.lcqJer:disabled .c2 {
  fill: #BFBFBF;
}

.lcqJer .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.iPCzYB:hover .c2 {
  fill: #FF456A;
}

.iPCzYB:disabled .c2 {
  fill: #BFBFBF;
}

.iPCzYB .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.elhzGX:hover .c2 {
  fill: #FF456A;
}

.elhzGX:disabled .c2 {
  fill: #BFBFBF;
}

.elhzGX .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.hThPWc:hover .c2 {
  fill: #FFF;
}

.hThPWc:disabled .c2 {
  fill: #FFF;
}

.hThPWc .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.AWlLV:hover .c2 {
  fill: #FFF;
}

.AWlLV:disabled .c2 {
  fill: #FFF;
}

.AWlLV .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cceUYT:hover .c2 {
  fill: #FFF;
}

.cceUYT:disabled .c2 {
  fill: #FFF;
}

.cceUYT .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hkdgRd:hover .c2 {
  fill: #1476FB;
}

.hkdgRd:disabled .c2 {
  fill: #BFBFBF;
}

.hkdgRd .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.gCPJNp:hover .c2 {
  fill: #1476FB;
}

.gCPJNp:disabled .c2 {
  fill: #BFBFBF;
}

.gCPJNp .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.ixsFmi:hover .c2 {
  fill: #1476FB;
}

.ixsFmi:disabled .c2 {
  fill: #BFBFBF;
}

.ixsFmi .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.dMDZWY:hover .c2 {
  fill: #FFF;
}

.dMDZWY:disabled .c2 {
  fill: #FFF;
}

.dMDZWY .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.jyvRpa:hover .c2 {
  fill: #FFF;
}

.jyvRpa:disabled .c2 {
  fill: #FFF;
}

.jyvRpa .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kuQuAk:hover .c2 {
  fill: #FFF;
}

.kuQuAk:disabled .c2 {
  fill: #FFF;
}

.kuQuAk .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cBEylu:hover .c2 {
  fill: #4CB050;
}

.cBEylu:disabled .c2 {
  fill: #BFBFBF;
}

.cBEylu .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.grhPew:hover .c2 {
  fill: #4CB050;
}

.grhPew:disabled .c2 {
  fill: #BFBFBF;
}

.grhPew .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.gPJEbi:hover .c2 {
  fill: #4CB050;
}

.gPJEbi:disabled .c2 {
  fill: #BFBFBF;
}

.gPJEbi .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.kvrFrd:hover .c2 {
  fill: #FFF;
}

.kvrFrd:disabled .c2 {
  fill: #FFF;
}

.kvrFrd .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.kurbjj:hover .c2 {
  fill: #FFF;
}

.kurbjj:disabled .c2 {
  fill: #FFF;
}

.kurbjj .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kiQMnY:hover .c2 {
  fill: #FFF;
}

.kiQMnY:disabled .c2 {
  fill: #FFF;
}

.kiQMnY .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dlWHso:hover .c2 {
  fill: #FFE200;
}

.dlWHso:disabled .c2 {
  fill: #BFBFBF;
}

.dlWHso .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.fLEPtd:hover .c2 {
  fill: #FFE200;
}

.fLEPtd:disabled .c2 {
  fill: #BFBFBF;
}

.fLEPtd .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.dldNsa:hover .c2 {
  fill: #FFE200;
}

.dldNsa:disabled .c2 {
  fill: #BFBFBF;
}

.dldNsa .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.iSnbTb:hover .c2 {
  fill: #FFF;
}

.iSnbTb:disabled .c2 {
  fill: #FFF;
}

.iSnbTb .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.bdACEm:hover .c2 {
  fill: #FFF;
}

.bdACEm:disabled .c2 {
  fill: #FFF;
}

.bdACEm .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.drlEWn:hover .c2 {
  fill: #FFF;
}

.drlEWn:disabled .c2 {
  fill: #FFF;
}

.drlEWn .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.bSwSlG:hover .c2 {
  fill: #858585;
}

.bSwSlG:disabled .c2 {
  fill: #BFBFBF;
}

.bSwSlG .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.ieWbCw:hover .c2 {
  fill: #858585;
}

.ieWbCw:disabled .c2 {
  fill: #BFBFBF;
}

.ieWbCw .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.llmvhI:hover .c2 {
  fill: #858585;
}

.llmvhI:disabled .c2 {
  fill: #BFBFBF;
}

.llmvhI .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.cwRUoR:hover .c2 {
  fill: #FFF;
}

.cwRUoR:disabled .c2 {
  fill: #BFBFBF;
}

.cwRUoR .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.hzhBwL:hover .c2 {
  fill: #FFF;
}

.hzhBwL:disabled .c2 {
  fill: #BFBFBF;
}

.hzhBwL .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.dfRgJh:hover .c2 {
  fill: #FFF;
}

.dfRgJh:disabled .c2 {
  fill: #BFBFBF;
}

.dfRgJh .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 9px 0px;
  width: 40px;
}

<button
  className="c0 c1"
  icon="plus"
  size="medium"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;

exports[`[SNAPSHOT][Componentes][Common][RoundButton] - Boton con los siguientes temas: red (usando un icono). Debe pintar el componente con el tema "red", tamaño "small" y con el icono "plus". 1`] = `
.c3 {
  display: inline-block;
  fill: #FFF;
  height: 50px;
  margin: 0px;
  vertical-align: top;
  width: 50px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1 {
  background-color: #FF456A;
  border: 1px solid #FF456A;
  border-radius: 5px;
  box-sizing: border-box;
  color: #FFF;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-family: "Open Sans",sans-serif;
  font-stretch: normal;
  font-style: normal;
  font-weight: bold;
  height: 30px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 20px;
  padding: 5px 30px;
  text-align: center;
  width: auto;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c1:hover {
  background-color: #CC1F62;
  border: 1px solid #CC1F62;
  color: #FFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover .c2 {
  fill: #FFF;
}

.c1:disabled {
  background-color: #BFBFBF;
  border: 1px solid #BFBFBF;
  color: #FFF;
  pointer-events: none;
}

.c1:disabled .c2 {
  fill: #FFF;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.eLqEyC:hover .c2 {
  fill: #FFF;
}

.eLqEyC:disabled .c2 {
  fill: #FFF;
}

.eLqEyC .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.fkrEAu:hover .c2 {
  fill: #FFF;
}

.fkrEAu:disabled .c2 {
  fill: #FFF;
}

.fkrEAu .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.eLeNVn:hover .c2 {
  fill: #FFF;
}

.eLeNVn:disabled .c2 {
  fill: #FFF;
}

.eLeNVn .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.ggHuZO:hover .c2 {
  fill: #FFF;
}

.ggHuZO:disabled .c2 {
  fill: #FFF;
}

.ggHuZO .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.dkOUuu:hover .c2 {
  fill: #FFF;
}

.dkOUuu:disabled .c2 {
  fill: #FFF;
}

.dkOUuu .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.lcqJer:hover .c2 {
  fill: #FF456A;
}

.lcqJer:disabled .c2 {
  fill: #BFBFBF;
}

.lcqJer .c2 {
  fill: #FF456A;
  height: 18px;
  width: 18px;
}

.iPCzYB:hover .c2 {
  fill: #FF456A;
}

.iPCzYB:disabled .c2 {
  fill: #BFBFBF;
}

.iPCzYB .c2 {
  fill: #FF456A;
  height: 20px;
  width: 20px;
}

.elhzGX:hover .c2 {
  fill: #FF456A;
}

.elhzGX:disabled .c2 {
  fill: #BFBFBF;
}

.elhzGX .c2 {
  fill: #FF456A;
  height: 30px;
  width: 30px;
}

.hThPWc:hover .c2 {
  fill: #FFF;
}

.hThPWc:disabled .c2 {
  fill: #FFF;
}

.hThPWc .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.AWlLV:hover .c2 {
  fill: #FFF;
}

.AWlLV:disabled .c2 {
  fill: #FFF;
}

.AWlLV .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.cceUYT:hover .c2 {
  fill: #FFF;
}

.cceUYT:disabled .c2 {
  fill: #FFF;
}

.cceUYT .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.hkdgRd:hover .c2 {
  fill: #1476FB;
}

.hkdgRd:disabled .c2 {
  fill: #BFBFBF;
}

.hkdgRd .c2 {
  fill: #1476FB;
  height: 18px;
  width: 18px;
}

.gCPJNp:hover .c2 {
  fill: #1476FB;
}

.gCPJNp:disabled .c2 {
  fill: #BFBFBF;
}

.gCPJNp .c2 {
  fill: #1476FB;
  height: 20px;
  width: 20px;
}

.ixsFmi:hover .c2 {
  fill: #1476FB;
}

.ixsFmi:disabled .c2 {
  fill: #BFBFBF;
}

.ixsFmi .c2 {
  fill: #1476FB;
  height: 30px;
  width: 30px;
}

.dMDZWY:hover .c2 {
  fill: #FFF;
}

.dMDZWY:disabled .c2 {
  fill: #FFF;
}

.dMDZWY .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.jyvRpa:hover .c2 {
  fill: #FFF;
}

.jyvRpa:disabled .c2 {
  fill: #FFF;
}

.jyvRpa .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kuQuAk:hover .c2 {
  fill: #FFF;
}

.kuQuAk:disabled .c2 {
  fill: #FFF;
}

.kuQuAk .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.cBEylu:hover .c2 {
  fill: #4CB050;
}

.cBEylu:disabled .c2 {
  fill: #BFBFBF;
}

.cBEylu .c2 {
  fill: #4CB050;
  height: 18px;
  width: 18px;
}

.grhPew:hover .c2 {
  fill: #4CB050;
}

.grhPew:disabled .c2 {
  fill: #BFBFBF;
}

.grhPew .c2 {
  fill: #4CB050;
  height: 20px;
  width: 20px;
}

.gPJEbi:hover .c2 {
  fill: #4CB050;
}

.gPJEbi:disabled .c2 {
  fill: #BFBFBF;
}

.gPJEbi .c2 {
  fill: #4CB050;
  height: 30px;
  width: 30px;
}

.kvrFrd:hover .c2 {
  fill: #FFF;
}

.kvrFrd:disabled .c2 {
  fill: #FFF;
}

.kvrFrd .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.kurbjj:hover .c2 {
  fill: #FFF;
}

.kurbjj:disabled .c2 {
  fill: #FFF;
}

.kurbjj .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.kiQMnY:hover .c2 {
  fill: #FFF;
}

.kiQMnY:disabled .c2 {
  fill: #FFF;
}

.kiQMnY .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.dlWHso:hover .c2 {
  fill: #FFE200;
}

.dlWHso:disabled .c2 {
  fill: #BFBFBF;
}

.dlWHso .c2 {
  fill: #FFE200;
  height: 18px;
  width: 18px;
}

.fLEPtd:hover .c2 {
  fill: #FFE200;
}

.fLEPtd:disabled .c2 {
  fill: #BFBFBF;
}

.fLEPtd .c2 {
  fill: #FFE200;
  height: 20px;
  width: 20px;
}

.dldNsa:hover .c2 {
  fill: #FFE200;
}

.dldNsa:disabled .c2 {
  fill: #BFBFBF;
}

.dldNsa .c2 {
  fill: #FFE200;
  height: 30px;
  width: 30px;
}

.iSnbTb:hover .c2 {
  fill: #FFF;
}

.iSnbTb:disabled .c2 {
  fill: #FFF;
}

.iSnbTb .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.bdACEm:hover .c2 {
  fill: #FFF;
}

.bdACEm:disabled .c2 {
  fill: #FFF;
}

.bdACEm .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.drlEWn:hover .c2 {
  fill: #FFF;
}

.drlEWn:disabled .c2 {
  fill: #FFF;
}

.drlEWn .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.bSwSlG:hover .c2 {
  fill: #858585;
}

.bSwSlG:disabled .c2 {
  fill: #BFBFBF;
}

.bSwSlG .c2 {
  fill: #858585;
  height: 18px;
  width: 18px;
}

.ieWbCw:hover .c2 {
  fill: #858585;
}

.ieWbCw:disabled .c2 {
  fill: #BFBFBF;
}

.ieWbCw .c2 {
  fill: #858585;
  height: 20px;
  width: 20px;
}

.llmvhI:hover .c2 {
  fill: #858585;
}

.llmvhI:disabled .c2 {
  fill: #BFBFBF;
}

.llmvhI .c2 {
  fill: #858585;
  height: 30px;
  width: 30px;
}

.cwRUoR:hover .c2 {
  fill: #FFF;
}

.cwRUoR:disabled .c2 {
  fill: #BFBFBF;
}

.cwRUoR .c2 {
  fill: #FFF;
  height: 18px;
  width: 18px;
}

.hzhBwL:hover .c2 {
  fill: #FFF;
}

.hzhBwL:disabled .c2 {
  fill: #BFBFBF;
}

.hzhBwL .c2 {
  fill: #FFF;
  height: 20px;
  width: 20px;
}

.dfRgJh:hover .c2 {
  fill: #FFF;
}

.dfRgJh:disabled .c2 {
  fill: #BFBFBF;
}

.dfRgJh .c2 {
  fill: #FFF;
  height: 30px;
  width: 30px;
}

.c0 {
  border-radius: 50%;
  padding: 1px 0px 0px 0px;
  width: 30px;
}

<button
  className="c0 c1"
  icon="plus"
  size="small"
  theme="red"
>
  <svg
    className="c2 c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<g>
                <path d=\\"M409.133,109.203c-19.608-33.592-46.205-60.189-79.798-79.796C295.736,9.801,259.058,0,219.273,0
                    c-39.781,0-76.47,9.801-110.063,29.407c-33.595,19.604-60.192,46.201-79.8,79.796C9.801,142.8,0,179.489,0,219.267
                    c0,39.78,9.804,76.463,29.407,110.062c19.607,33.592,46.204,60.189,79.799,79.798c33.597,19.605,70.283,29.407,110.063,29.407
                    s76.47-9.802,110.065-29.407c33.593-19.602,60.189-46.206,79.795-79.798c19.603-33.596,29.403-70.284,29.403-110.062
                    C438.533,179.485,428.732,142.795,409.133,109.203z M347.179,237.539c0,4.948-1.811,9.236-5.428,12.847
                    c-3.62,3.614-7.901,5.428-12.847,5.428h-73.091v73.084c0,4.948-1.813,9.232-5.428,12.854c-3.613,3.613-7.897,5.421-12.847,5.421
                    h-36.543c-4.948,0-9.231-1.808-12.847-5.421c-3.617-3.621-5.426-7.905-5.426-12.854v-73.084h-73.089
                    c-4.948,0-9.229-1.813-12.847-5.428c-3.616-3.61-5.424-7.898-5.424-12.847v-36.547c0-4.948,1.809-9.231,5.424-12.847
                    c3.617-3.617,7.898-5.426,12.847-5.426h73.092v-73.089c0-4.949,1.809-9.229,5.426-12.847c3.616-3.616,7.898-5.424,12.847-5.424
                    h36.547c4.948,0,9.233,1.809,12.847,5.424c3.614,3.617,5.428,7.898,5.428,12.847v73.089h73.084c4.948,0,9.232,1.809,12.847,5.426
                    c3.617,3.615,5.428,7.898,5.428,12.847V237.539z\\"/>
            </g>",
      }
    }
    icon="plus"
    viewBox="0 0 438.533 438.533"
    x="0px"
    y="0px"
  />
</button>
`;
